Fix missing linebreaks in song lyrics on mobile

--- a/frontend/css/theme.css
+++ b/frontend/css/theme.css
@@ -84,6 +84,9 @@ body {
     br {
         display: none; /* No forced line breaks in smaller sizes */
     }
+    .modal br {
+        display: inline; /* Except in song lyrics! */
+    }
 }
 
 
